<?xml version="1.0" encoding="utf-8"?><!--
  ~ (c) Copyright 2021. All rights reserved by Synapses S.r.l.s.
  ~ https://www.synapseslab.com/
  ~
  ~ Created by Davide Agostini on 30/11/21, 14:27.
  ~ Last modified 30/11/21, 14:27
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchBar"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:visible="false"
        app:showAsAction="never" />
</menu>