<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023 Synapses s.r.l.s. All rights reserved.
  ~
  ~ Licensed under the Apache License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://github.com/synapseslab/android-bluegps-sdk-demoapp/blob/main/LICENSE.md
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolboxView"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/round_border"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/map_control"
                    android:textColor="@color/white" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchStatus"
                    app:thumbTint="@color/blue_500"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/map_control_orientation"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnHorizontal"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:backgroundTint="@color/grey"
                    android:text="@string/hor"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnVertical"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.2"
                    android:text="@string/ver"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/button_width"
                    android:textColor="@color/white" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderButtonWidth"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:stepSize="1"
                    android:valueFrom="20"
                    android:valueTo="200"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/button_height"
                    android:textColor="@color/white" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderButtonHeight"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:stepSize="1"
                    android:valueFrom="20"
                    android:valueTo="200"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SDK functions"
                android:layout_marginTop="30dp"
                android:textColor="@color/white" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/actionHideRoomLayer"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/blue_500"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/show_layer"
                        android:textSize="12sp"
                        app:tint="@color/white"/>

                    <Button
                        android:id="@+id/actionResetView"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/blue_500"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/reset_view"
                        android:textSize="12sp"
                        app:tint="@color/white" />

                    <Button
                        android:id="@+id/actionNextFloor"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/blue_500"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/next_floor"
                        android:textSize="12sp"
                        app:tint="@color/white" />

                    <Button
                        android:id="@+id/actionGetFloor"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/blue_500"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/get_floor"
                        android:textSize="12sp"
                        app:tint="@color/white" />

                    <Button
                        android:id="@+id/actionLoadResource"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/blue_500"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/load_resource"
                        android:textSize="12sp"
                        app:tint="@color/white" />

                    <Button
                        android:id="@+id/actionCurrentFloor"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/blue_500"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/current_floor"
                        android:textSize="12sp"
                        app:tint="@color/white" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
