<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023 Synapses s.r.l.s. All rights reserved.
  ~
  ~ Licensed under the Apache License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://github.com/synapseslab/android-bluegps-sdk-demoapp/blob/main/LICENSE.md
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layoutAuthenticationMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioGuest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/guest_authentication" />

                    <RadioButton
                        android:id="@+id/radioJwt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/jwt_authentication" />

                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutGuestAuthentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/card_login"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutAuthenticationMode">

                <TextView
                    android:id="@+id/tvAuthentication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guest_authentication"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:autofillHints=""
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:visibility="gone"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnGuestLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:minWidth="200dp"
                    android:onClick="loginGuestMode"
                    android:text="@string/login" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutServiceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutGuestAuthentication">

                <TextView
                    android:id="@+id/token"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Token" />

                <TextView
                    android:id="@+id/statusService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:text="Status service" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutServiceButton">


                <Button
                    android:id="@+id/buttonStartService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:minWidth="200dp"
                    android:enabled="false"
                    android:onClick="startAdvertising"
                    android:text="@string/start_service" />

                <Button
                    android:id="@+id/buttonStopService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    android:minWidth="200dp"
                    android:onClick="stopAdvertising"
                    android:text="@string/stop_service" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/inLoadingLayout"
        layout="@layout/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>